--- a/main.css
+++ b/main.css
@@ -50,6 +50,12 @@ body.dark {
   width: 250px;
   padding: 10px 14px;
   background: var(--sidebar-color);
+  transition: var(--tran-04);
+  z-index: 100;
+}
+
+.sidebar.close {
+  width: 90px;
 }
 
 /* === Reusable CSS === */
@@ -57,6 +63,13 @@ body.dark {
   font-size: 16px;
   font-weight: 500;
   color: var(--text-color);
+  transition: var(--tran-02);
+  white-space: nowrap;
+  opacity: 1;
+}
+
+.sidebar.close .text {
+  opacity: 0;
 }
 
 .sidebar .image {
@@ -119,20 +132,31 @@ header .image-text .header-text {
   position: absolute;
   top: 50%;
   right: -25px;
-  transform: translateY(-50%);
+  transform: translateY(-50%) rotate(180deg);
   height: 25px;
   width: 25px;
-  background: var(--primary-color);
+  background-color: var(--primary-color);
+  color: var(--sidebar-color);
+  border-radius: 50%;
   display: flex;
   align-items: center;
   justify-content: center;
-  border-radius: 50%;
-  color: var(--sidebar-color);
   font-size: 22px;
+  cursor: pointer;
+  transition: var(--tran-05);
+}
+
+.sidebar.close header .toggle {
+  transform: translateY(-50%);
+}
+
+body.dark .sidebar header .toggle {
+  background: var(--text-color);
 }
 
 .sidebar .search-box {
   background: var(--primary-color-light);
+  border-radius: 6px;
 }
 
 .search-box input {
@@ -163,6 +187,11 @@ header .image-text .header-text {
   color: var(--sidebar-color);
 }
 
+body.dark .sidebar li a:hover .icon,
+body.dark .sidebar li a:hover .text {
+  color: var(--text-color);
+}
+
 .sidebar .menu-bar {
   height: calc(100% - 50px);
   display: flex;
@@ -171,6 +200,8 @@ header .image-text .header-text {
 }
 
 .menu-bar .mode {
+  position: relative;
+  border-radius: 6px;
   background: var(--primary-color-light);
 }
 
@@ -183,18 +214,32 @@ header .image-text .header-text {
 
 .menu-bar .mode i {
   position: absolute;
+  transition: var(--tran-03);
 }
 
 .menu-bar .mode i.sun {
   opacity: 0;
 }
 
+body.dark .menu-bar .mode i.sun {
+  opacity: 1;
+}
+
+body.dark .menu-bar .mode i.moon {
+  opacity: 0;
+}
+
 .menu-bar .mode .toggle-switch {
+  position: absolute;
+  right: 0;
   display: flex;
   align-items: center;
   justify-content: center;
   height: 100%;
   min-width: 60px;
+  cursor: pointer;
+  border-radius: 6px;
+  background: var(--primary-color-light);
 }
 
 .toggle-switch .switch {
@@ -221,4 +266,30 @@ header .image-text .header-text {
 
 body.dark .switch::before {
   left: 22px;
+}
+
+.home {
+  position: absolute;
+  top: 0;
+  top: 0;
+  left: 250px;
+  height: 100vh;
+  width: calc(100% - 250px);
+  background-color: var(--body-color);
+  transition: var(--tran-05);
+}
+.home .text {
+  font-size: 30px;
+  font-weight: 500;
+  color: var(--text-color);
+  padding: 12px 60px;
+}
+
+.sidebar.close ~ .home {
+  left: 90px;
+  height: 100vh;
+  width: calc(100% - 90px);
+}
+body.dark .home .text {
+  color: var(--text-color);
 }
